Fixed comment name and refresh turbo frames issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,18 @@
   <body>
     <div class="body-container">
       <%= render "layouts/nav", class: "navbar" %>
-      <%= yield %>
+
+      <% if user_signed_in? %>
+        <div class="content">
+          <%= render "posts/left_column" %>
+
+          <%= yield %>
+
+          <%= render "posts/right_column" %>
+        </div>
+      <% else %>
+        <%= yield %>
+      <% end %>
     </div>
   </body>
 </html>
