--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -1,5 +1,5 @@
 
-<%= turbo_frame_tag "middle-column" do%>
+<%= turbo_frame_tag "middle-column", data: { turbo_action: "advance" } do %>
   <div class="column-middle">
     <% if @my_friends.any? %>
       <% @my_friends.each do |friend| %>
