--- a/app/views/static_pages/user_posts.html.erb
+++ b/app/views/static_pages/user_posts.html.erb
@@ -1,5 +1,5 @@
 
-<%= turbo_frame_tag "middle-column" do %>
+<%= turbo_frame_tag "middle-column", data: { turbo_action: "advance" } do %>
   <div class="column-middle">
     <% if @user_posts.any? %>
       <div class="column-middle">
