--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,9 +1,10 @@
 
-<nav class="navbar navbar-expand-lg bg-primary px-4">
+<nav class="nav navbar navbar-expand-lg px-4">
   <div class="container-fluid d-flex justify-content-center">
 
-    <%= image_tag "icons/acorn.png" %>
-    <%= link_to "Chipper", posts_path, class: "navbar-brand fs-4 text-white" %>
+    <%= link_to posts_path, class: "navbar-brand fs-4 text-white" do %>
+      <%= image_tag "icons/acorn.png" %> Chipper
+    <% end %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,7 +31,7 @@
     </div>
     <div>
       <% if user_signed_in? %>
-          <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-secondary" %>
+          <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-outline-light" %>
       <% end %>
     </div>
   </div>
