--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -16,7 +16,7 @@
               <div class="flex-grow-1 ms-2">
                 <div class="d-flex flex-column">
                   <div>
-                    <%= link_to post.user.full_name, user_path(post.user_id), class: "text-decoration-none post-name" %>
+                    <%= link_to post.user.full_name, user_path(post.user_id), class: "link text-decoration-none post-name" %>
                   </div>
                   <div class="text-muted">
                     <%= post.created_at.strftime("%B %e %Y") %>
@@ -27,10 +27,10 @@
               <div class="d-flex">
                 <% if post.user_id == current_user.id %>
                   <%= link_to edit_post_path(post, view: "likes#index"), class: "pe-2", method: :edit, data: { turbo_frame: "edit-text-box", post: post} do %>
-                    <i class="fa-regular fa-pen-to-square fa-lg"></i>
+                    <i class="link fa-regular fa-pen-to-square fa-lg"></i>
                   <% end %>
                   <%= link_to post_path(post, view: "likes#index"), data: { turbo_method: :delete } do %>
-                    <i class="fa-regular fa-trash-can fa-lg"></i>
+                    <i class="link fa-regular fa-trash-can fa-lg"></i>
                   <% end %>
                 <% end %>
               </div>
@@ -49,7 +49,7 @@
                 <% pre_like = post.likes.find { |like| like.user_id == current_user.id } %>
                 <% if pre_like %>
                   <%= link_to post_like_path(post, pre_like, view: "likes#index"), data: { turbo_method: :delete } do %>
-                    <i class="fa-solid fa-thumbs-up fa-lg"></i>
+                    <i class="link fa-solid fa-thumbs-up fa-lg"></i>
                   <% end %>
                 <% end %>
               </div>
@@ -57,7 +57,7 @@
                 <%= post.likes.count %>
               </div>
               <div>
-                <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "text-decoration-none" %>
+                <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "link text-decoration-none" %>
               </div>
             </div>
           </div>
