--- a/app/views/posts/_post_header.html.erb
+++ b/app/views/posts/_post_header.html.erb
@@ -9,7 +9,7 @@
   <div class="flex-grow-1 ms-2">
     <div class="d-flex flex-column">
       <div>
-        <%= link_to post.user.full_name, user_path(post.user_id), class: "text-decoration-none post-name" %>
+        <%= link_to post.user.full_name, user_path(post.user_id), class: "link text-decoration-none post-name" %>
       </div>
       <div class="text-muted">
         <%= post.created_at.strftime("%B %e %Y") %>
@@ -19,11 +19,11 @@
   
   <div class="d-flex">
     <% if post.user_id == current_user.id %>
-      <%= link_to edit_post_path(post), class: "pe-2", method: :edit, data: { turbo_frame: dom_id(post, "edit-text-box") } do %>
+      <%= link_to edit_post_path(post), class: "link pe-2", method: :edit, data: { turbo_frame: dom_id(post, "edit-text-box") } do %>
         <i class="fa-regular fa-pen-to-square fa-lg"></i>
       <% end %>
       <%= link_to post_path(post), data: { turbo_method: :delete } do %>
-        <i class="fa-regular fa-trash-can fa-lg"></i>
+        <i class="link fa-regular fa-trash-can fa-lg"></i>
       <% end %>
     <% end %>
   </div>
