--- a/app/views/static_pages/_user_posts.html.erb
+++ b/app/views/static_pages/_user_posts.html.erb
@@ -14,7 +14,7 @@
           <div class="flex-grow-1 ms-2">
             <div class="d-flex flex-column">
               <div>
-                <%= link_to post.user.full_name, user_path(post.user_id), class: "text-decoration-none post-name" %>
+                <%= link_to post.user.full_name, user_path(post.user_id), class: "link text-decoration-none post-name" %>
               </div>
               <div class="text-muted">
                 <%= post.created_at.strftime("%B %e %Y") %>
@@ -25,10 +25,10 @@
           <div class="d-flex">
             <% if post.user_id == current_user.id %>
               <%= link_to edit_post_path(post, view: "static_pages#user_posts"), class: "pe-2", method: :edit, data: { turbo_frame: "edit-text-box"} do %>
-                <i class="fa-regular fa-pen-to-square fa-lg"></i>
+                <i class="link fa-regular fa-pen-to-square fa-lg"></i>
               <% end %>
               <%= link_to post_path(post, view: "static_pages#user_posts"), data: { turbo_method: :delete } do %>
-                <i class="fa-regular fa-trash-can fa-lg"></i>
+                <i class="link fa-regular fa-trash-can fa-lg"></i>
               <% end %>
             <% end %>
           </div>
@@ -45,11 +45,11 @@
             <% pre_like = post.likes.find { |like| like.user_id == current_user.id } %>
             <% if pre_like %>
               <%= link_to post_like_path(post, pre_like, view: "static_pages#user_posts"), data: { turbo_method: :delete } do %>
-                <i class="fa-solid fa-thumbs-up fa-lg"></i>
+                <i class="link fa-solid fa-thumbs-up fa-lg"></i>
               <% end %>
             <% else %>
               <%= link_to post_likes_path(post, view: "static_pages#user_posts"), data: { turbo_method: :post } do %>
-                <i class="fa-regular fa-thumbs-up fa-lg"></i>
+                <i class="link fa-regular fa-thumbs-up fa-lg"></i>
               <% end %>
             <% end %>
           </div>
@@ -57,7 +57,7 @@
             <%= post.likes.count %>
           </div>
           <div>
-            <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "text-decoration-none" %>
+            <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "link text-decoration-none" %>
           </div>
         </div>
       </div>
