--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,32 +10,32 @@
             <%= @user.full_name %>
           </div>
           <div class="d-flex justify-content-center ">
-            <%= link_to "view all posts", user_posts_path(@user.id), class: "m-3 text-decoration-none" %>
-            <%= link_to "friends", invitation_path(@user.id), class: "m-3 text-decoration-none" %>
-            <%= link_to "liked posts", user_likes_path(@user.id), class: "m-3 text-decoration-none" %>
+            <%= link_to "view all posts", user_posts_path(@user.id), class: "link m-3 text-decoration-none" %>
+            <%= link_to "friends", invitation_path(@user.id), class: "link m-3 text-decoration-none" %>
+            <%= link_to "liked posts", user_likes_path(@user.id), class: "link m-3 text-decoration-none" %>
           </div>
           <div class="d-flex flex-column">
             <% if @user.location %>
               <div>
-                <i class="fa-solid fa-map-location-dot"></i>
+                <i class="text-muted fa-solid fa-map-location-dot"></i>
                 <%= @user.location %>
               </div>
             <% end %>
             <% if @user.education %>
               <div>
-                <i class="fa-solid fa-school"></i>
+                <i class="text-muted fa-solid fa-school"></i>
                 <%= @user.education %>
               </div>
             <% end %>
             <% if @user.occupation %>
               <div>
-                <i class="fa-solid fa-briefcase"></i>
+                <i class="text-muted fa-solid fa-briefcase"></i>
                 <%= @user.occupation %>
               </div>
             <% end %>
             <% if @user.birthday %>
-              <div>
-                <i class="fa-solid fa-cake-candles"></i>
+              <div class="mb-2">
+                <i class="text-muted fa-solid fa-cake-candles"></i>
                 <%= @user.birthday.strftime("%B %d, %Y") %>
               </div>
             <% end %>
@@ -57,7 +57,6 @@
       </div>
     </div>
     <div>
-      <%# <%= render partial: "static_pages/user_posts", locals: { user: @user, path: user_posts_path(current_user.id) } %>
 
     <% @user_posts.each do |post| %>
       <div class="card bg-light mt-3">
@@ -73,7 +72,7 @@
             <div class="flex-grow-1 ms-2">
               <div class="d-flex flex-column">
                 <div>
-                  <%= link_to post.user.full_name, user_path(post.user_id), class: "text-decoration-none post-name" %>
+                  <%= link_to post.user.full_name, user_path(post.user_id), class: "link text-decoration-none post-name" %>
                 </div>
                 <div class="text-muted">
                   <%= post.created_at.strftime("%B %e %Y") %>
@@ -84,10 +83,10 @@
             <div class="d-flex">
               <% if post.user_id == current_user.id %>
                 <%= link_to edit_post_path(post, view: "user#show"), class: "pe-2", method: :edit, data: { turbo_frame: "edit-text-box"} do %>
-                  <i class="fa-regular fa-pen-to-square fa-lg"></i>
+                  <i class="link fa-regular fa-pen-to-square fa-lg"></i>
                 <% end %>
                 <%= link_to post_path(post, view: "user#show"), data: { turbo_method: :delete } do %>
-                  <i class="fa-regular fa-trash-can fa-lg"></i>
+                  <i class="link fa-regular fa-trash-can fa-lg"></i>
                 <% end %>
               <% end %>
             </div>
@@ -104,11 +103,11 @@
               <% pre_like = post.likes.find { |like| like.user_id == current_user.id } %>
               <% if pre_like %>
                 <%= link_to post_like_path(post, pre_like, view: "user#show"), data: { turbo_method: :delete } do %>
-                  <i class="fa-solid fa-thumbs-up fa-lg"></i>
+                  <i class="link fa-solid fa-thumbs-up fa-lg"></i>
                 <% end %>
               <% else %>
                 <%= link_to post_likes_path(post, view: "user#show"), data: { turbo_method: :post } do %>
-                  <i class="fa-regular fa-thumbs-up fa-lg"></i>
+                  <i class="link fa-regular fa-thumbs-up fa-lg"></i>
                 <% end %>
               <% end %>
             </div>
@@ -116,7 +115,7 @@
               <%= post.likes.count %>
             </div>
             <div>
-              <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "text-decoration-none" %>
+              <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "link text-decoration-none" %>
             </div>
           </div>
         </div>
